--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,9 @@
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_margin="3dp"
-            android:background="@drawable/ic_notifications_black_24dp" />
+            android:layout_weight="1"
+            android:onClick="goToNotifScreen"
+            app:icon="@drawable/ic_notifications_black_24dp" />
 
         <Button
             android:id="@+id/profile_btn"
@@ -135,5 +137,22 @@
             android:src="@drawable/ic_locations_near_me"
             android:contentDescription="Locations Near Me" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/sos_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:onClick="goToSOSScreen"
+        android:text="SOS"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/custom_bottom_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_bar"
+        app:layout_constraintVertical_bias="0.322"
+        app:rippleColor="@android:color/white"
+        tools:ignore="UnknownId" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
